--- a/pom.xml
+++ b/pom.xml
@@ -45,10 +45,24 @@
         <developerConnection>scm:git:https://github.com/LibrePDF/OpenPDF</developerConnection>
     </scm>
     <!-- Distribution config from http://central.sonatype.org/pages/apache-maven.html#distribution-management-and-authentication -->
+    <!--
     <distributionManagement>
         <snapshotRepository>
             <id>ossrh</id>
             <url>https://oss.sonatype.org/content/repositories/snapshots</url>
+        </snapshotRepository>
+    </distributionManagement>
+    -->
+
+    <!-- Distribution config for bol Systemhaus -->
+    <distributionManagement>
+        <repository>
+            <id>s3-releases</id>
+            <url>${env.URL_RELEASES}</url>
+        </repository>
+        <snapshotRepository>
+            <id>s3-snapshots</id>
+            <url>${env.URL_SNAPSHOTS}</url>
         </snapshotRepository>
     </distributionManagement>
 
