--- a/pom.xml
+++ b/pom.xml
@@ -92,6 +92,7 @@
         <!-- dependencies -->
         <bouncycastle.version>1.72</bouncycastle.version>
         <commons-io.version>2.11.0</commons-io.version>
+        <rxjava.version>2.2.0</rxjava.version>
         <dom4j.version>2.1.3</dom4j.version>
         <fop.version>2.8</fop.version>
         <!-- jakarta.servlet-api.version is only used in Tests.
@@ -137,6 +138,11 @@
                 <groupId>commons-io</groupId>
                 <artifactId>commons-io</artifactId>
                 <version>${commons-io.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>io.reactivex.rxjava2</groupId>
+                <artifactId>rxjava</artifactId>
+                <version>${rxjava.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.jfree</groupId>
